readme file with .env fix

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ MONGO_URI=mongodb://localhost:27017/ticketdb
 ELASTICSEARCH_URL=https://localhost:9200
 ELASTIC_USERNAME=elastic
 ELASTIC_PASSWORD=elastic
-ELASTIC_CA_PATH=C:/Users/Assad/Downloads/elasticsearch-8.17.0/config/certs/http_ca.crt
+ELASTIC_CA_PATH=/config/certs/http_ca.crt
